--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		<rest.easy.client.version>4.6.0</rest.easy.client.version>
+		<rest.easy.client.version>4.6.0.Final</rest.easy.client.version>
 		<paypal.rest.easy.client.version>2.3.3-RELEASE</paypal.rest.easy.client.version>
 	</properties>
 
